# structuralstrength

./: README.md  pyproject.toml
dev_tools/: environment.yml  requirements.txt
